services/system/definition/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: store-ingress
  labels:
    system: a01
    group: base
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - secretName: store-tls
    hosts:
    - secondapi.azclitest.com
  rules:
  - host: secondapi.azclitest.com
    http:
      paths:
      - path: /api
        backend:
          serviceName: store-internal-svc
          servicePort: 80
